--- a/charlie-dependencies/pom.xml
+++ b/charlie-dependencies/pom.xml
@@ -15,8 +15,9 @@
         <spring-cloud.version>2021.0.4</spring-cloud.version>
         <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
 
-        <hutool.all-version>5.8.8</hutool.all-version>
-        <gson-verison>2.9.1</gson-verison>
+        <hutool-all.version>5.8.8</hutool-all.version>
+        <gson.verison>2.9.1</gson.verison>
+        <fastjson.verison>2.0.15.graal</fastjson.verison>
 
         <flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
     </properties>
@@ -50,13 +51,19 @@
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
-                <version>${hutool.all-version}</version>
+                <version>${hutool-all.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>${gson-verison}</version>
+                <version>${gson.verison}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.verison}</version>
             </dependency>
 
             <dependency>
