--- a/charlie-dependencies/pom.xml
+++ b/charlie-dependencies/pom.xml
@@ -18,6 +18,7 @@
         <hutool-all.version>5.8.8</hutool-all.version>
         <gson.verison>2.9.1</gson.verison>
         <fastjson.verison>2.0.15.graal</fastjson.verison>
+        <mybatis-plus.version>3.5.2</mybatis-plus.version>
 
         <flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
     </properties>
@@ -64,6 +65,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.verison}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus</artifactId>
+                <version>${mybatis-plus.version}</version>
             </dependency>
 
             <dependency>
