--- a/charlie-dependencies/pom.xml
+++ b/charlie-dependencies/pom.xml
@@ -74,6 +74,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.cl.code</groupId>
                 <artifactId>charlie-common</artifactId>
                 <version>${revision}</version>
