--- a/charlie-dependencies/pom.xml
+++ b/charlie-dependencies/pom.xml
@@ -17,7 +17,7 @@
 
         <hutool-all.version>5.8.8</hutool-all.version>
         <gson.verison>2.9.1</gson.verison>
-        <fastjson.verison>2.0.15.graal</fastjson.verison>
+        <fastjson2.verison>2.0.18</fastjson2.verison>
         <mybatis-plus.version>3.5.2</mybatis-plus.version>
 
         <flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
@@ -62,9 +62,15 @@
             </dependency>
 
             <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>${fastjson.verison}</version>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>${fastjson2.verison}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2-extension</artifactId>
+                <version>${fastjson2.verison}</version>
             </dependency>
 
             <dependency>
